# irtool

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
lib/gtf/: item.cc  item.h  transcript.cc  transcript.h
src/: Makefile.am  config.cc  config.h  genome1.cc  genome1.h  irtool.cc  irtool.h  main.cc
